# recaptcha-scraper

./: .env_sample  Dockerfile  README.md  pyproject.toml
app/: main.py
app/routers/: scraping.py
app/schemas/: url.py
app/services/: playwright.py
scraper/: main.py
scraper/routers/: scraping.py
scraper/schemas/: scrape_response.py
scraper/services/: playwright.py
scraper/services/challenge_solver/: __init__.py  recaptcha_solver.py
scraper/services/scraping/: __init__.py  challenge_solver.py  recaptcha_solver.py  safeguarded.py  safeguarded_scraper.py  scraper.py  scraper_selector.py  service_selector.py
scraper/services/scraping/interfaces/: scraper.py
tests/: test_main.py  test_scraping.py
