[tool.poetry]
name = "recaptcha-scraper"
version = "0.1.0"
description = ""
authors = ["rojoyin <rojoyin@gmail.com>"]
readme = "README.md"
packages = [{include = "recaptcha_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.0"}
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
